cabal-version:       2.4
name:                tx-template
version:             0.1.0.0
synopsis:            Kadena transaction template tool
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          doug@kadena.io
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    PactAPI.CommandSpec
    TxTemplate
  -- other-modules:
  -- other-extensions:
  build-depends:
    Decimal,
    HsYAML,
    HsYAML-aeson,
    aeson,
    attoparsec,
    base ^>= 4.13.0.0,
    base16-bytestring,
    bytestring,
    chainweb-api,
    containers,
    lens,
    mtl,
    mustache,
    pact,
    text,
    time,
    unordered-containers,
    vector,
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

executable tx-template
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    HsYAML,
    HsYAML-aeson,
    aeson,
    base,
    bytestring,
    containers,
    errors,
    mtl,
    mustache,
    optparse-applicative,
    text,
    tx-template,
    unordered-containers
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -Wall
